--- a/src/blog/templates/blog/base.html
+++ b/src/blog/templates/blog/base.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html>
   <head>
-    <title>Blog Project</title>
+    <title>myTechnoBlog</title>
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -57,20 +57,35 @@
 
 
     {# The actual blog posts#}
-          <div class="content container loader">
-              <div class="row">
-                  <div class="col-md-8">
-                    <div class="blog_posts">
-                      {% block content %}
-                      {% endblock %}
+      <div class="content container loader">
+          <div class="row">
+              <div class="col-md-8">
+                <div class="blog_posts">
+                  {% block content %}
+                  {% endblock %}
 
-                    </div>
-                  </div>
+                </div>
               </div>
           </div>
-
-    {# SCRIPTS#}
-    <script type="text/javascript" src="{% static 'js/blog.js' %}"></script>
-
-  </body>
+        </div>
+            
+      {# SCRIPTS#}
+      <script type="text/javascript" src="{% static 'js/blog.js' %}"></script>
+            
+            
+    </body>
+    <footer>
+      <div>Made with 
+        <i class="fa fa-heart " style="color: red;" ></i> 
+        by Suryansh Maheshwari
+      </div>
+      <div>Copyright © 2021</div>
+      <div>
+        <a href="#"><i class='fa fa-github' style="margin-right: 10px; color: white;"></i></a>
+        <a href=""><i class='fa fa-linkedin' style="margin-right: 10px; color: white;"></i></a>
+        <a href=""><i class='fa fa-instagram' style="margin-right: 10px; color: white;"></i></a>
+      </div>
+    </footer>
+    
 </html>
+          
