--- a/blog/templates/blog/about.html
+++ b/blog/templates/blog/about.html
@@ -1,7 +1,9 @@
 {% extends 'blog/base.html' %}
 
 {% block content %}
-<h1>About me</h1>
-<p>Thanks for visiting my blog! Check all this cool stuff about me!</p>
+    <div class="jumbotron">
+        <h1>About me</h1>
+        <p>Thanks for visiting my blog! Check all this cool stuff about me.</p>
+    </div>
 
 {% endblock %}
