--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -3,6 +3,8 @@
 <html>
   <head>
     <title>myTechnoBlog</title>
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
     integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
@@ -19,7 +21,6 @@
 
     {# Custom CSS#}
     <link rel="stylesheet" href="{% static 'css/blog.css' %}">
-    <!-- <link rel="stylesheet" href="{% static 'css/all.css' %}"> -->
 
     {# Fonts#}
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Russo+One" rel="stylesheet">
@@ -31,22 +32,20 @@
       <div class="container">
         <div class="navbar-nav align-items-center">
           <a class="navbar-brand bigbrand" href="{% url 'post_list' %}" style="margin-right: 20px;">My Techno blog    </a>
-          <a class="nav-item nav-link" href="{% url 'about' %}">  <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-person-fill" viewBox="0 0 16 16">
+          <a class="nav-item nav-link" href="{% url 'about' %}" >  <span><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-file-earmark-person-fill" viewBox="0 0 16 16">
             <path d="M9.293 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V4.707A1 1 0 0 0 13.707 4L10 .293A1 1 0 0 0 9.293 0zM9.5 3.5v-2l3 3h-2a1 1 0 0 1-1-1zM11 8a3 3 0 1 1-6 0 3 3 0 0 1 6 0zm2 5.755V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1v-.245S4 12 8 12s5 1.755 5 1.755z"/>
             </svg></span>About</a>
           <a class="nav-item nav-link" href="https://www.github.com"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
             <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
           </svg>Github</a>
           
-          
-          <!-- <a class="nav-item nav-link" href="https://www.linkedin.com">LinkedIn</a> -->
         </div>
         <div class="navbar-nav align-items-center ml-auto">
           {% if user.is_authenticated %}
             <a class="nav-item nav-link" href="{% url 'post_new' %}">New Post</a>
             <a class="nav-item nav-link" href="{% url 'post_draft_list' %}">Drafts</a>
             <a class="nav-item nav-link" href="{% url 'logout' %}">Log out</a>
-            <a style="margin-left: 15px; color: #DDF45B">Welcome: {{ user.username }}</a>
+            <a style="margin-left: 15px; color: #C2F970">Welcome: {{ user.username }}</a>
           {% else %}
             <a class="nav-item nav-link" href="{% url 'login' %}" aria-label="Login">
               <span class="fa fa-user" aria-hidden="true"></span></a>
@@ -69,23 +68,23 @@
           </div>
         </div>
             
+        
+      <footer>
+        <div>Made with 
+          <i class="fa fa-heart " style="color: red;" ></i> 
+          by Suryansh Maheshwari
+        </div>
+        <div>Copyright © 2021</div>
+        <div>
+          <a href="https://github.com/Suryanshm000"><i class='fa fa-github'></i></a>
+          <a href="https://www.linkedin.com/in/suryansh-maheshwari-341a641b7/"><i class='fa fa-linkedin'></i></a>
+          <a href=""><i class='fa fa-instagram'></i></a>
+        </div>
+      </footer>
+        
+  </body>
+      
       {# SCRIPTS#}
-      <script type="text/javascript" src="{% static 'js/blog.js' %}"></script>
-            
-            
-    </body>
-    <footer>
-      <div>Made with 
-        <i class="fa fa-heart " style="color: red;" ></i> 
-        by Suryansh Maheshwari
-      </div>
-      <div>Copyright © 2021</div>
-      <div>
-        <a href="#"><i class='fa fa-github' style="margin-right: 10px; color: white;"></i></a>
-        <a href=""><i class='fa fa-linkedin' style="margin-right: 10px; color: white;"></i></a>
-        <a href=""><i class='fa fa-instagram' style="margin-right: 10px; color: white;"></i></a>
-      </div>
-    </footer>
-    
+    <script type="text/javascript" src="{% static 'js/blog.js' %}"></script>
 </html>
           
