Improved responsiveness and added the links

--- a/blog/static/css/blog.css
+++ b/blog/static/css/blog.css
@@ -6,9 +6,6 @@
 
 body{
   background-color: #d7dee9;
-  /* display: flex;
-  flex-direction: column;
-  min-height: 100%; */
 }
 nav{
   background-color: #21295C;
@@ -18,23 +15,22 @@ nav div a{
   color: #ebe4e5;
 }
 .content{
-  
+  padding-bottom: 160px;
 }
 
 footer{
-  background-color:rgb(37, 34, 34);
+  background-color: #1e2c2a;
   color: white;
-  /* position: absolute; */
-  /* bottom: 0; */
+  position: fixed;
+  bottom: 0;
   min-width:100%;
-  margin-top: 20px;
-  padding: 10px;
+  padding: 5px;
   text-align: center;
 }
 
 footer div a{
-  text-decoration:none;
-
+  margin: 5px; 
+  color: white;
 }
 .postdate{
   text-align: center;
@@ -65,20 +61,13 @@ footer div a{
   font-size: 1.5em;
 }
 
-@media(max-width:700px){
-  .content{
-    /* position: relative;
-    min-height: 100%; */
-  }
-  footer{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-  }
-
+           /* ---- small screens ----- */
+@media (max-width:700px) {
+nav div a{
+  float: left;
+}
   
 }
-
 
 /*COLOR CHANGER*/
 /*Credit and Source: http://codepen.io/thapliyalshivam/pen/dvgXVO*/
